--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Triple Chocolate Chunk Cookies</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7910460.jpg&w=595&h=791&c=sc&poi=face&q=60" alt="Picture of delicious cookies">
 </body>
 </html>
