--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -9,5 +9,20 @@
 <body>
     <h1>Triple Chocolate Chunk Cookies</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7910460.jpg&w=595&h=791&c=sc&poi=face&q=60" alt="Picture of delicious cookies">
+    <h2>Description</h2>
+    <p>There is nothing more to say other than the fact that these are triple chocolate chip chunk cookies. The name itself is explanatory, but these cookies are absolutely
+        worth the time and effort it takes to make them. Consider the following: You do not have triple chocolate chip chunk cookies. By perusing and inevitably following 
+        this recipe, you too could now possess triple chocolate chip chunk cookies. 
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3/4 cup brown sugar</li>
+        <li>1/2 cup unsalted butter</li>
+        <li>1/2 cup white sugar</li>
+        <li>1 teaspoon salt</li>
+        <li>1 large egg</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 1/2 cups all-purpose flour</li>
+    </ul>
 </body>
 </html>
