cookies page completed

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -23,6 +23,16 @@
         <li>1 large egg</li>
         <li>1 teaspoon vanilla extract</li>
         <li>1 1/2 cups all-purpose flour</li>
+        <li>3/4 teaspoon baking soda</li>
+        <li>1 cup milk chocolate chips</li>
+        <li>1 bar dark chocolate</li>
+        <li>3 tablespoons white chocolate chips</li>
     </ul>
+    <ol>
+        <li>Mix everything together</li>
+        <li>Heat the oven to 350F</li>
+        <li>Divide the dough</li>
+        <li>Bake in the oven til it looks done</li>
+    </ol>
 </body>
 </html>
