--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Triple Chocolate Chunk Cookies</title>
 </head>
 <body>
     <h1>Triple Chocolate Chunk Cookies</h1>
@@ -28,6 +28,7 @@
         <li>1 bar dark chocolate</li>
         <li>3 tablespoons white chocolate chips</li>
     </ul>
+    <h2>Instructions</h2>
     <ol>
         <li>Mix everything together</li>
         <li>Heat the oven to 350F</li>
