--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -14,6 +14,21 @@
         Some delicious waffles for breakfast
     </p>
     <h2>Ingredients</h2>
+    <ul>
+        <li>2 cups flour</li>
+        <li>1 teaspoon salt</li>
+        <li>4 teaspoons baking powder</li>
+        <li>2 tablespoons white sugar</li>
+        <li>2 eggs</li>
+        <li>1 1/2 cups milk</li>
+        <li>1/3 cup butter</li>
+        <li>1 teaspoon vanilla extract</li>
+    </ul>
+    <ol>
+        <li>Mix together the ingredients</li>
+        <li>Beat the eggs and stir in the ingredients</li>
+        <li>Cook em</li>
+    </ol>
     <h2>Instructions</h2>
 </body>
 </html>
