--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/cookies.html">Triple Chocolate Chunk Cookies</a>
+    <a href="./recipes/waffles.html">Classic Waffles</a>
+    <a href="./recipes/smoothie.html">Almond Berry Smoothie</a>
 </body>
 </html>
