readability for index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/cookies.html">Triple Chocolate Chunk Cookies</a>
-    <a href="./recipes/waffles.html">Classic Waffles</a>
-    <a href="./recipes/smoothie.html">Almond Berry Smoothie</a>
+    <a href="./recipes/cookies.html">Triple Chocolate Chunk Cookies</a><br>
+    <a href="./recipes/waffles.html">Classic Waffles</a><br>
+    <a href="./recipes/smoothie.html">Almond Berry Smoothie</a><br>
 </body>
 </html>
